<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openntf.example</groupId>
	<artifactId>webinar-todo-examples</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<inceptionYear>2025</inceptionYear>
	
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jnosql-version>1.1.8</jnosql-version>
	</properties>
	
	<modules>
		<module>jnosql-driver-keep</module>
		<module>todo-mvc</module>
	</modules>
	
	<repositories>
		<repository>
			<id>openntf</id>
			<url>https://artifactory.openntf.org/openntf</url>
		</repository>
	</repositories>
	
	<build>
		<plugins>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<aggregate>true</aggregate>
					<header>license.txt</header>
					<excludes>
						<exclude>**/pom.xml</exclude>
			      <exclude>**/src/test/resources/**</exclude>
			      <exclude>**/src/main/resources/**</exclude>
					</excludes>
					<properties>
						<owner>Jesse Gallagher</owner>
						<copyrightYear>2025</copyrightYear>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M1</version>
				<executions>
					<execution>
						<id>enforce-maven-and-java</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0.1</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>17</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
      <plugin>
        <groupId>io.openliberty.tools</groupId>
        <artifactId>liberty-maven-plugin</artifactId>
        <version>3.11.4</version>
        <configuration>
          <runtimeArtifact>
            <groupId>io.openliberty.beta</groupId>
            <artifactId>openliberty-runtime</artifactId>
            <version>25.0.0.9-beta</version>
            <type>zip</type>
          </runtimeArtifact>
        </configuration>
      </plugin>
		</plugins>
	</build>
</project>